# ShotBot

./: README.md  brackettest.3mf  cup holder full.3mf  main.py  pyproject.toml
